--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Online judge</title>
   </head>
   <body>
-    <div id="root">
-    </div>
+    <div id="root"></div>
   </body>
 </html>
